dark mode - css fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,7 @@ select:focus,
   background: #F9FAFB !important;
   border: 1px solid #1C64F2 !important;
   box-shadow: none !important;
-  font-family: 'Inter';
+  /* font-family: 'Inter'; */
   font-style: normal;
   font-weight: 400;
   color: #111928 !important;
@@ -41,7 +41,7 @@ select:focus+.form-icon {
   background-color: #F3FAF7 !important;
   border: 1px solid #0E9F6E !important;
   box-shadow: none !important;
-  font-family: 'Inter';
+  /* font-family: 'Inter'; */
   font-style: normal;
   font-weight: 400;
   color: #046C4E !important;
@@ -62,6 +62,8 @@ select:focus+.form-icon {
   background: #374151 !important;
   border: 1px solid #3F83F8 !important;
   color: #FFFFFF !important;
+  -webkit-text-fill-color: #FFFFFF !important;
+  -webkit-box-shadow: 0 0 0 30px #374151 inset !important;
 }
 
 .dark .success input,
@@ -69,11 +71,15 @@ select:focus+.form-icon {
   background: #374151 !important;
   border: 1px solid #0E9F6E !important;
   color: #0E9F6E !important;
+  -webkit-text-fill-color: #0E9F6E !important;
+  -webkit-box-shadow: 0 0 0 30px #374151 inset !important;
 }
 
 .dark .success input::placeholder {
   color: #0E9F6E !important;
 }
+
+/* error */
 
 .error {
   color: #E02424 !important;
@@ -84,13 +90,15 @@ select:focus+.form-icon {
   background: #FDF2F2 !important;
   border: 1px solid #F05252 !important;
   box-shadow: none !important;
-  font-family: 'Inter';
+  /* font-family: 'Inter'; */
   font-style: normal;
   font-weight: 400;
   /* font-size: 14px;
   line-height: 150%; */
   /* color: #C81E1E !important; */
   color: #111928 !important;
+  -webkit-text-fill-color: #111928 !important;
+  -webkit-box-shadow: 0 0 0 30px #FDF2F2 inset !important;
 }
 
 /* 
@@ -103,6 +111,8 @@ select:focus+.form-icon {
   background: #374151 !important;
   border: 1px solid #F05252 !important;
   color: #F05252 !important;
+  -webkit-text-fill-color: #F05252 !important;
+  -webkit-box-shadow: 0 0 0 30px #374151 inset !important;
 }
 
 .dark .error input::placeholder {
